--- a/Boing-unity/Assembly-CSharp-Editor.csproj
+++ b/Boing-unity/Assembly-CSharp-Editor.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Cardboard\Editor\CardboardEditor.cs" />
      <Compile Include="Assets\Cardboard\Editor\StereoControllerEditor.cs" />
      <Compile Include="Assets\Editor\CrossPlatformInput\CrossPlatformInputInitialize.cs" />
+     <Compile Include="Assets\Editor\Editor\OSCHelper.cs" />
      <None Include="Assets\Cardboard\Legacy\Resources\SkyboxMesh.shader" />
      <None Include="Assets\Materials\PortalShader.shader" />
      <None Include="Assets\Materials\GhostShader.shader" />
